compiler/testData/diagnostics/tests/incompleteCode/kt59041.fir.kt
// RUN_PIPELINE_TILL: SOURCE
// DIAGNOSTICS: -UNUSED_VARIABLE

fun main() {
     val list = <!UNRESOLVED_REFERENCE!>mutable<!> ListOf<!SYNTAX!><<!>Int<!SYNTAX!><!SYNTAX!>><!>(1) {}<!>
}
